<resources>
    <string name="song_cover">SongCover</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="recent_songs">Recent Songs</string>
    <string name="popular_songs">Popular Songs</string>
    <string name="app_name">Music Project</string>
    <string name="album_art">Album Art</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>

    <string name="profile_username">Username:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_activity_title">User Profile</string>
    <!-- Login and User related strings -->
    <string name="logout">Đăng xuất</string>
    <string name="profile">Hồ sơ</string>
    <string name="settings">Cài đặt</string>
    <string name="logout_successful">Đăng xuất thành công</string>
    <string name="logout_failed">Đăng xuất thất bại: %1$s</string>
    <string name="failed_load_profile">Không thể tải hồ sơ: %1$s</string>

    <!-- Song related strings -->
    <string name="no_recent_songs">Không có bài hát gần đây</string>
    <string name="no_popular_songs">Không có bài hát phổ biến</string>
    <string name="failed_load_recent_songs">Không thể tải bài hát gần đây: %1$s</string>
    <string name="failed_load_popular_songs">Không thể tải bài hát phổ biến: %1$s</string>

    <string name="album_cover">Album Cover</string>
    <string name="previous_track">Previous Track</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next_track">Next Track</string>
    <string name="no_top_spotify_songs">No top songs</string>
    <string name="failed_load_spotify_songs">Failed load songs</string>
    <string name="network_error">Network err</string>
    <string name="previous_button">ss</string>
    <string name="play_pause_button">ss</string>
    <string name="next_button">ss</string>
    <string-array name="role_options">
        <item>ARTIST</item>
        <item>USER</item>
    </string-array>
</resources>